--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <!-- Icon that will indicate whether you are online or offline - enabled if you are using offline/appcache (see above) -->
             <div id="online-status" title="Online"></div>
             <menu type="toolbar">
-                <button id="install"><span class="icon icon-add">add</span></button>
+                <button id="install" onclick="JavaScript:alert('Well done!')"><span class="icon icon-add">add</span></button>
             </menu>
             <h1>
                 Firefox OS Boilerplate App
